src/objects/XMatched__c.object
<CustomObject>
    <fields>
        <fullName>ContactId__c</fullName>
        <label>ContactId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LicensureId__c</fullName>
        <label>LicensureId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MatchCode__c</fullName>
        <description>Currently, C = Contact, L = Licensure__c</description>
        <label>MatchCode</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MatchingAccountId__c</fullName>
        <label>MatchingAccountId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>XMatched</label>
    <nameField>
        <label>XMatchedId Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XMatches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>